[package]
name = "distracing"
version = "0.1.0"
authors = ["Daniel Neuhäuser <daniel.neuhaeuser@zalando.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lightstep = ["prost", "prost-types", "bytes", "prost-build"]

[dependencies]
lazy_static = { version = "1.4.0" }

prost = { version = "0.5.0", optional = true }
bytes = { version = "0.4.0", optional = true }
prost-types = { version = "0.5.0", optional = true }

[build-dependencies]
prost-build = { version = "0.5.0", optional = true }
