[package]
name = "distracing"
version = "0.1.0"
authors = ["Daniel Neuhäuser <daniel.neuhaeuser@zalando.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lightstep = ["prost", "prost-types", "bytes", "prost-build", "rand", "reqwest", "log"]

[dependencies]
lazy_static = { version = "1.4.0" }

prost = { version = "0.5.0", optional = true }
bytes = { version = "0.4.0", optional = true }
prost-types = { version = "0.5.0", optional = true }
rand = { version = "0.7", optional = true }
reqwest = { version = "0.10", features = ["blocking"], optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
prost-build = { version = "0.5.0", optional = true }

[dev-dependencies]
# Used in examples
env_logger = { version = "0.7.1" }

[[example]]
name = "basic"
required-features = ["lightstep"]
