[package]
name = "distracing"
description = "OpenTracing library"
license = "MIT"
version = "0.1.0"
authors = ["Daniel Neuhäuser <daniel.neuhaeuser@zalando.de>"]
repository = "https://github.com/DasIch/distracing"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lightstep = ["prost", "prost-types", "bytes", "prost-build", "rand", "reqwest", "log", "base64"]

[dependencies]
lazy_static = { version = "1.4" }

prost = { version = "0.5", optional = true }
bytes = { version = "0.4", optional = true }
prost-types = { version = "0.5", optional = true }
rand = { version = "0.7", optional = true }
reqwest = { version = "0.10", features = ["blocking"], optional = true }
log = { version = "0.4", optional = true }
base64 = { version = "0.11", optional = true }

[build-dependencies]
prost-build = { version = "0.5", optional = true }

[dev-dependencies]
# Used in examples
env_logger = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
base64 = { version = "0.11" }

[[example]]
name = "basic"
required-features = ["lightstep"]

[[example]]
name = "lightstep_conformance"
required-features = ["lightstep"]
